--- a/packages/@asterics-docs/vuepress-theme-docs/styles/palette.styl
+++ b/packages/@asterics-docs/vuepress-theme-docs/styles/palette.styl
@@ -6,11 +6,11 @@ $codeBgColor = #282c34
 $arrowBgColor = #ccc
 
 // layout
-$navbarHeight = 3.5rem
-$sidebarWidth = 20rem
+// $navbarHeight = 3.5rem
+// $sidebarWidth = 20rem
 // $contentWidth = 740px
 // $contentWidth = 70%
-$contentWidth = 1400px
+// $contentWidth = 1400px
 // $contentWidth = 1040px
 
 // responsive breakpoints
