Update @asterics-docs/vuepress-theme-docs: remove comments

--- a/packages/@asterics-docs/vuepress-theme-docs/styles/index.styl
+++ b/packages/@asterics-docs/vuepress-theme-docs/styles/index.styl
@@ -5,6 +5,16 @@
 a:hover
     text-decoration: none !important
 
+// a
+//   white-space: nowrap;
+//   overflow: hidden;
+//   text-overflow: ellipsis;
+
+// a:before
+//   content: "\A";
+//   white-space: pre;
+
+
 img.emoji {
   height: 1.2rem;
   margin: 0 .05em 0 .1em;
