--- a/packages/@asterics-docs/vuepress-theme-docs/styles/palette.styl
+++ b/packages/@asterics-docs/vuepress-theme-docs/styles/palette.styl
@@ -4,33 +4,28 @@ $textColor = #000000
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
+// $badgeTipColor = #42b983
+// $badgeWarningColor = darken(#ffe564, 35%)
+// $badgeErrorColor = #DA5961
+
+$darkModeTextColor = saturation($accentColor,20%)
+// $darkModeTextColor = #5a7b86
+$darkModeBg = #121212
 
 // layout
-// $navbarHeight = 3.5rem
+$navbarHeight = 3.6rem
 // $sidebarWidth = 20rem
-// $contentWidth = 740px
-// $contentWidth = 70%
-// $contentWidth = 1400px
-// $contentWidth = 1040px
+$contentWidth = 740px
+// $homePageWidth = 960px
+
+$mediaHeight = $contentWidth * 9 / 16
+$contentHeight = 150px
+$slideMarginBottom = 40px
+
+// $toasterWidth = 25%
+$toasterWidth = 350px
 
 // responsive breakpoints
-// $MQNarrow = 1250px
-// $MQMobile = 1020px
-// $MQMobileNarrow = 419px
-// ===
-// $MQNarrow = 999px
-// $MQMobile = 789px
-// $MQMobileNarrow = 456px
-
-// responsive breakpoints
-// NOTE:
-// Changes of these breakpoints should be
-// aligned with the breakpoints defined
-// in palette.styl.
-//
-// Because of differing syntax, there is
-// currently no clean and easy solution,
-// except for this comment.
 $MQNarrow = 1234px
 $MQMobile = 999px
 $MQMobileNarrow = 456px
