Update @asterics-docs/vuepress-theme-docs: add ssr layouts, add documentation for asterics-docs, fix scrollbar style"

--- a/packages/@asterics-docs/vuepress-theme-docs/styles/index.styl
+++ b/packages/@asterics-docs/vuepress-theme-docs/styles/index.styl
@@ -20,9 +20,9 @@
 //   content: "\A";
 //   white-space: pre;
 
-#app, .theme-container
-  height 100vh
-  overflow hidden
+// #app, .theme-container
+//   height 100vh
+//   overflow hidden
 
 img.emoji
   height 1.2rem
