--- a/packages/@asterics-docs/vuepress-theme-docs/styles/scrollbar.styl
+++ b/packages/@asterics-docs/vuepress-theme-docs/styles/scrollbar.styl
@@ -1,6 +1,9 @@
 .ps
   overflow hidden !important
-  overflow-anchor none
+  overflow-anchor none !important
+  .ssr &
+      overflow auto !important
+      overflow-anchor auto !important
   touch-action auto
   .ps__rail-x
       height 15px
