Update @asterics-docs/vuepress-theme-docs: fix style for slide without slideshow and custom-container

--- a/packages/@asterics-docs/vuepress-theme-docs/styles/dark.styl
+++ b/packages/@asterics-docs/vuepress-theme-docs/styles/dark.styl
@@ -29,3 +29,9 @@ html.dark-mode
 
   .custom-block
     background-color lighten($darkModeBg,5%) !important
+    &.danger
+      p
+        color #8d0000
+
+  code
+    color grayscale($darkModeTextColor)
